Fix for AXIS2-804 - WSDL2Java fails while generating skeleton
Fixed a typo as well in a constant.